refactor: memberActions를 복사해서 내림차순 정렬하도록 수정, 검증 로직 내부로 이동
Co-authored-by: kunsanglee <gosmdochee2@gmail.com>
Co-authored-by: Arachne <jhg2819@naver.com>